--- a/index.html
+++ b/index.html
@@ -1,70 +1,171 @@
-import React from "react";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SiteSnap Pricing</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background: #f9fafb;
+      color: #1f2937;
+      padding: 2rem;
+    }
 
-export default function PricingPage() {
-  return (
-    <div className="min-h-screen bg-gray-50 p-6 text-gray-800">
-      <div className="text-center mb-12">
-        <h1 className="text-4xl font-bold mb-2">Simple Pricing for Roofing Teams</h1>
-        <p className="text-lg text-gray-600">
-          Start with a 30-day free trial of the Team plan. No credit card needed.
-        </p>
+    .container {
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+
+    .header h1 {
+      font-size: 2.5rem;
+      font-weight: 800;
+    }
+
+    .header p {
+      font-size: 1rem;
+      color: #6b7280;
+    }
+
+    .plans {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 2rem;
+    }
+
+    @media(min-width: 768px) {
+      .plans {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+
+    .plan {
+      background: white;
+      border: 1px solid #d1d5db;
+      border-radius: 1rem;
+      padding: 2rem;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.04);
+    }
+
+    .plan.featured {
+      border: 4px solid #3b82f6;
+    }
+
+    .plan h2 {
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+
+    .plan .price {
+      font-size: 2rem;
+      font-weight: 800;
+      margin: 0.5rem 0 1rem;
+    }
+
+    .plan p {
+      font-size: 0.875rem;
+      color: #6b7280;
+    }
+
+    .plan ul {
+      list-style: none;
+      padding-left: 0;
+      margin-top: 1rem;
+    }
+
+    .plan li {
+      margin-bottom: 0.5rem;
+      font-size: 0.95rem;
+    }
+
+    .trial {
+      margin-top: 1rem;
+      font-weight: 600;
+      color: #3b82f6;
+      text-align: center;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+
+    .footer span {
+      display: block;
+      margin-top: 0.3rem;
+      font-size: 0.8rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>Simple Pricing for Roofing Teams</h1>
+      <p>Start with a 30-day free trial of the Team plan. No credit card needed.</p>
+    </div>
+
+    <div class="plans">
+      <!-- Starter -->
+      <div class="plan">
+        <h2>Starter</h2>
+        <p>Recommended for 1–10 crew members</p>
+        <div class="price">$29/mo</div>
+        <ul>
+          <li>Track jobs and customer details</li>
+          <li>Job calendar with to-do checklists</li>
+          <li>Upload before & after job photos</li>
+          <li>Mobile-friendly and easy to use</li>
+          <li>Basic job reports (e.g. total jobs this month, open vs completed)</li>
+        </ul>
       </div>
 
-      <div className="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-        {/* Starter Plan */}
-        <div className="bg-white shadow-xl rounded-2xl p-6 border border-gray-200">
-          <h2 className="text-2xl font-bold mb-2">Starter</h2>
-          <p className="text-sm text-gray-500 mb-1">Recommended for 1–10 crew members</p>
-          <p className="text-3xl font-extrabold mb-4">$29<span className="text-base font-medium">/mo</span></p>
-          <ul className="space-y-2 text-sm">
-            <li>Track jobs and customer details</li>
-            <li>Job calendar with to-do checklists</li>
-            <li>Upload before & after job photos</li>
-            <li>Mobile-friendly and easy to use</li>
-            <li>Basic job reports (e.g. total jobs this month, open vs completed)</li>
-          </ul>
-        </div>
-
-        {/* Team Plan */}
-        <div className="bg-white shadow-xl rounded-2xl p-6 border-4 border-blue-500">
-          <h2 className="text-2xl font-bold mb-2">Team</h2>
-          <p className="text-sm text-gray-500 mb-1">Recommended for 10–20 crew members</p>
-          <p className="text-3xl font-extrabold mb-4">$59<span className="text-base font-medium">/mo</span></p>
-          <ul className="space-y-2 text-sm">
-            <li>Everything in Starter</li>
-            <li>Add users with different access levels</li>
-            <li>Update job status from start to finish</li>
-            <li>Add internal notes & comments</li>
-            <li>Track new leads and customers</li>
-            <li>Upload project files (like permits & plans)</li>
-            <li>Connect with Stripe and QuickBooks</li>
-          </ul>
-          <div className="mt-4 text-center text-blue-500 font-semibold">Includes Free 30-Day Trial</div>
-        </div>
-
-        {/* Elite Plan */}
-        <div className="bg-white shadow-xl rounded-2xl p-6 border border-gray-200">
-          <h2 className="text-2xl font-bold mb-2">Elite</h2>
-          <p className="text-sm text-gray-500 mb-1">Recommended for 20+ crew members or multiple teams</p>
-          <p className="text-3xl font-extrabold mb-4">$119<span className="text-base font-medium">/mo</span></p>
-          <ul className="space-y-2 text-sm">
-            <li>Everything in Team</li>
-            <li>Manage crews by location or division</li>
-            <li>Automated reminders and task tracking</li>
-            <li>Advanced job reports (job speed, crew performance, job volume)</li>
-            <li>Sync jobs and payments with QuickBooks/Xero</li>
-            <li>Sync leads with HubSpot or Salesforce</li>
-            <li>Priority support & setup assistance</li>
-          </ul>
-        </div>
+      <!-- Team -->
+      <div class="plan featured">
+        <h2>Team</h2>
+        <p>Recommended for 10–20 crew members</p>
+        <div class="price">$59/mo</div>
+        <ul>
+          <li>Everything in Starter</li>
+          <li>Add users with different access levels</li>
+          <li>Update job status from start to finish</li>
+          <li>Add internal notes & comments</li>
+          <li>Track new leads and customers</li>
+          <li>Upload project files (like permits & plans)</li>
+          <li>Connect with Stripe and QuickBooks</li>
+        </ul>
+        <div class="trial">Includes Free 30-Day Trial</div>
       </div>
 
-      <div className="text-center mt-12">
-        <p className="text-gray-600">
-          We’re building the simplest jobsite photo & crew management tool for roofing companies.
-        </p>
-        <p className="text-sm text-gray-500 mt-2">App version coming soon for even faster access from the field.</p>
+      <!-- Elite -->
+      <div class="plan">
+        <h2>Elite</h2>
+        <p>Recommended for 20+ crew members or multiple teams</p>
+        <div class="price">$119/mo</div>
+        <ul>
+          <li>Everything in Team</li>
+          <li>Manage crews by location or division</li>
+          <li>Automated reminders and task tracking</li>
+          <li>Reports on job speed & crew performance</li>
+          <li>Sync jobs and payments with QuickBooks/Xero</li>
+          <li>Sync leads with HubSpot or Salesforce</li>
+          <li>Priority support & setup assistance</li>
+        </ul>
       </div>
     </div>
-  );
-}
+
+    <div class="footer">
+      We’re building the simplest jobsite photo & crew management tool for roofing companies.
+      <span>App version coming soon for even faster access from the field.</span>
+    </div>
+  </div>
+</body>
+</html>
