--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
         <p>Recommended for 1–10 crew members</p>
         <div class="price">$29/mo</div>
         <ul>
-          <li>Track jobs and customer details</li>
-          <li>Job calendar with to-do checklists</li>
-          <li>Upload before & after job photos</li>
-          <li>Mobile-friendly and easy to use</li>
-          <li>Basic job reports (e.g. total jobs this month, open vs completed)</li>
+          <li>-Track jobs and customer details</li>
+          <li>-Job calendar with to-do checklists</li>
+          <li>-Upload before & after job photos</li>
+          <li>-Mobile-friendly and easy to use</li>
+          <li>-Basic job reports (e.g. total jobs this month, open vs completed)</li>
         </ul>
       </div>
 
@@ -134,13 +134,13 @@
         <p>Recommended for 10–20 crew members</p>
         <div class="price">$59/mo</div>
         <ul>
-          <li>Everything in Starter</li>
-          <li>Add users with different access levels</li>
-          <li>Update job status from start to finish</li>
-          <li>Add internal notes & comments</li>
-          <li>Track new leads and customers</li>
-          <li>Upload project files (like permits & plans)</li>
-          <li>Connect with Stripe and QuickBooks</li>
+          <li>-Everything in Starter</li>
+          <li>-Add users with different access levels</li>
+          <li>-Update job status from start to finish</li>
+          <li>-Add internal notes & comments</li>
+          <li>-Track new leads and customers</li>
+          <li>-Upload project files (like permits & plans)</li>
+          <li>-Connect with Stripe and QuickBooks</li>
         </ul>
         <div class="trial">Includes Free 30-Day Trial</div>
       </div>
@@ -151,13 +151,13 @@
         <p>Recommended for 20+ crew members or multiple teams</p>
         <div class="price">$119/mo</div>
         <ul>
-          <li>Everything in Team</li>
-          <li>Manage crews by location or division</li>
-          <li>Automated reminders and task tracking</li>
-          <li>Reports on job speed & crew performance</li>
-          <li>Sync jobs and payments with QuickBooks/Xero</li>
-          <li>Sync leads with HubSpot or Salesforce</li>
-          <li>Priority support & setup assistance</li>
+          <li>-Everything in Team</li>
+          <li>-Manage crews by location or division</li>
+          <li>-Automated reminders and task tracking</li>
+          <li>-Reports on job speed & crew performance</li>
+          <li>-Sync jobs and payments with QuickBooks/Xero</li>
+          <li>-Sync leads with HubSpot or Salesforce</li>
+          <li>-Priority support & setup assistance</li>
         </ul>
       </div>
     </div>
