--- a/settings.html
+++ b/settings.html
@@ -1,1 +1,26 @@
-<h1>Settings Page</h1><p>Coming soon...</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Site Name - Settings</title>
+  <!-- Bootstrap CSS for styling -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- Firebase JS SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <!-- Firebase config and initialization -->
+  <script src="firebase-config.js"></script>
+  <!-- Settings script -->
+  <script src="settings.js"></script>
+</head>
+<body>
+  <div class="container mt-4">
+    <h2>Settings</h2>
+    <p><strong>Email:</strong> <span id="userEmail"></span></p>
+    <p><strong>Current Plan:</strong> <span id="userTier"></span></p>
+    <button id="changePlanBtn" class="btn btn-primary">Change Plan</button>
+    <button id="logoutBtn2" class="btn btn-secondary">Logout</button>
+  </div>
+</body>
+</html>
