--- a/index.html
+++ b/index.html
@@ -39,5 +39,28 @@
       <p class="mt-2">Already have an account? <a href="#" id="showLogin">Log in</a></p>
     </div>
   </div>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyClDU6x5KzOcYQC09OjwNQFkMhNiBYuKjc",
+    authDomain: "sitesnap-28da9.firebaseapp.com",
+    projectId: "sitesnap-28da9",
+    storageBucket: "sitesnap-28da9.firebasestorage.app",
+    messagingSenderId: "230487344341",
+    appId: "1:230487344341:web:607b67f8e6263d86ba0e5c",
+    measurementId: "G-MXH9N9N99Q"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
