--- a/index.html
+++ b/index.html
@@ -15,6 +15,47 @@
   <script src="login.js"></script>
 </head>
 <body>
+  <!-- AUTH CONTAINER -->
+<div id="auth-container" style="max-width: 400px; margin: 40px auto; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
+  <h2>Login or Sign Up</h2>
+  <input type="email" id="email" placeholder="Email" style="width: 100%; padding: 10px; margin-bottom: 10px;" />
+  <input type="password" id="password" placeholder="Password" style="width: 100%; padding: 10px; margin-bottom: 10px;" />
+  
+  <button onclick="signUp()" style="width: 100%; padding: 10px; background: #4CAF50; color: white; border: none; margin-bottom: 10px;">Sign Up</button>
+  <button onclick="logIn()" style="width: 100%; padding: 10px; background: #2196F3; color: white; border: none;">Log In</button>
+
+  <div id="auth-message" style="margin-top: 15px; color: red;"></div>
+</div>
+<script>
+  const auth = firebase.auth();
+
+  function signUp() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+
+    auth.createUserWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        document.getElementById("auth-message").innerText = "Signup successful!";
+      })
+      .catch((error) => {
+        document.getElementById("auth-message").innerText = error.message;
+      });
+  }
+
+  function logIn() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+
+    auth.signInWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        document.getElementById("auth-message").innerText = "Login successful!";
+        // Redirect or load dashboard here
+      })
+      .catch((error) => {
+        document.getElementById("auth-message").innerText = error.message;
+      });
+  }
+</script>
   <div class="container mt-5">
     <h2>Login</h2>
     <div id="loginDiv">
