--- a/index.html
+++ b/index.html
@@ -2,106 +2,78 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Site Name - Login</title>
-  <!-- Bootstrap CSS for styling -->
+  <title>SiteSnap - Login</title>
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- Firebase JS SDKs -->
+  
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-  <!-- Firebase config and initialization -->
-  <script src="firebase-config.js"></script>
-  <!-- Login page script -->
-  <script src="login.js"></script>
 </head>
 <body>
-  <!-- AUTH CONTAINER -->
-<div id="auth-container" style="max-width: 400px; margin: 40px auto; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
-  <h2>Login or Sign Up</h2>
-  <input type="email" id="email" placeholder="Email" style="width: 100%; padding: 10px; margin-bottom: 10px;" />
-  <input type="password" id="password" placeholder="Password" style="width: 100%; padding: 10px; margin-bottom: 10px;" />
-  
-  <button onclick="signUp()" style="width: 100%; padding: 10px; background: #4CAF50; color: white; border: none; margin-bottom: 10px;">Sign Up</button>
-  <button onclick="logIn()" style="width: 100%; padding: 10px; background: #2196F3; color: white; border: none;">Log In</button>
+  <!-- Auth Container -->
+  <div class="container mt-5" style="max-width: 400px;">
+    <h2 class="text-center">Login or Sign Up</h2>
 
-  <div id="auth-message" style="margin-top: 15px; color: red;"></div>
-</div>
-<script>
-  const auth = firebase.auth();
-
-  function signUp() {
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    auth.createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        document.getElementById("auth-message").innerText = "Signup successful!";
-      })
-      .catch((error) => {
-        document.getElementById("auth-message").innerText = error.message;
-      });
-  }
-
-  function logIn() {
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    auth.signInWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        document.getElementById("auth-message").innerText = "Login successful!";
-        // Redirect or load dashboard here
-      })
-      .catch((error) => {
-        document.getElementById("auth-message").innerText = error.message;
-      });
-  }
-</script>
-  <div class="container mt-5">
-    <h2>Login</h2>
-    <div id="loginDiv">
-      <div class="form-group">
-        <input type="email" id="loginEmail" class="form-control" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <input type="password" id="loginPassword" class="form-control" placeholder="Password">
-      </div>
-      <button id="loginBtn" class="btn btn-primary">Log In</button>
-      <p class="mt-2">Don't have an account? <a href="#" id="showSignUp">Sign up</a></p>
+    <div class="form-group">
+      <input type="email" id="email" class="form-control" placeholder="Email">
     </div>
-    <div id="signUpDiv" style="display:none;">
-      <h2>Sign Up</h2>
-      <div class="form-group">
-        <input type="email" id="signUpEmail" class="form-control" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <input type="password" id="signUpPassword" class="form-control" placeholder="Password">
-      </div>
-      <button id="signUpBtn" class="btn btn-success">Sign Up</button>
-      <p class="mt-2">Already have an account? <a href="#" id="showLogin">Log in</a></p>
+    <div class="form-group">
+      <input type="password" id="password" class="form-control" placeholder="Password">
     </div>
+
+    <button onclick="logIn()" class="btn btn-primary btn-block mb-2">Log In</button>
+    <button onclick="signUp()" class="btn btn-success btn-block">Sign Up</button>
+
+    <div id="auth-message" class="mt-3 text-danger text-center"></div>
   </div>
-  <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyClDU6x5KzOcYQC09OjwNQFkMhNiBYuKjc",
-    authDomain: "sitesnap-28da9.firebaseapp.com",
-    projectId: "sitesnap-28da9",
-    storageBucket: "sitesnap-28da9.firebasestorage.app",
-    messagingSenderId: "230487344341",
-    appId: "1:230487344341:web:607b67f8e6263d86ba0e5c",
-    measurementId: "G-MXH9N9N99Q"
-  };
+  <!-- Firebase Config -->
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyClDU6x5KzOcYQC09OjwNQFkMhNiBYuKjc",
+      authDomain: "sitesnap-28da9.firebaseapp.com",
+      projectId: "sitesnap-28da9",
+      storageBucket: "sitesnap-28da9.appspot.com",
+      messagingSenderId: "230487344341",
+      appId: "1:230487344341:web:607b67f8e6263d86ba0e5c",
+      measurementId: "G-MXH9N9N99Q"
+    };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
+  <!-- Auth Logic -->
+  <script>
+    const auth = firebase.auth();
+
+    function signUp() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      auth.createUserWithEmailAndPassword(email, password)
+        .then(() => {
+          document.getElementById("auth-message").innerText = "Signup successful!";
+          // Redirect or show dashboard later
+        })
+        .catch((error) => {
+          document.getElementById("auth-message").innerText = error.message;
+        });
+    }
+
+    function logIn() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          document.getElementById("auth-message").innerText = "Login successful!";
+          // Later: window.location.href = "dashboard.html";
+        })
+        .catch((error) => {
+          document.getElementById("auth-message").innerText = error.message;
+        });
+    }
+  </script>
 </body>
 </html>
