--- a/index.html
+++ b/index.html
@@ -3,33 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <title>SiteSnap - Login</title>
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  
-  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
 <body>
-  <!-- Auth Container -->
-  <div class="container mt-5" style="max-width: 400px;">
-    <h2 class="text-center">Login or Sign Up</h2>
+  <div id="auth-container" style="max-width: 400px; margin: 40px auto; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
+    <h2>Login or Sign Up</h2>
+    <input type="email" id="email" placeholder="Email" style="width: 100%; padding: 10px; margin-bottom: 10px;" />
+    <input type="password" id="password" placeholder="Password" style="width: 100%; padding: 10px; margin-bottom: 10px;" />
+    
+    <button onclick="signUp()" style="width: 100%; padding: 10px; background: #4CAF50; color: white; border: none; margin-bottom: 10px;">Sign Up</button>
+    <button onclick="logIn()" style="width: 100%; padding: 10px; background: #2196F3; color: white; border: none;">Log In</button>
 
-    <div class="form-group">
-      <input type="email" id="email" class="form-control" placeholder="Email">
-    </div>
-    <div class="form-group">
-      <input type="password" id="password" class="form-control" placeholder="Password">
-    </div>
-
-    <button onclick="logIn()" class="btn btn-primary btn-block mb-2">Log In</button>
-    <button onclick="signUp()" class="btn btn-success btn-block">Sign Up</button>
-
-    <div id="auth-message" class="mt-3 text-danger text-center"></div>
+    <div id="auth-message" style="margin-top: 15px; color: red;"></div>
   </div>
 
-  <!-- Firebase Config -->
   <script>
+    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyClDU6x5KzOcYQC09OjwNQFkMhNiBYuKjc",
       authDomain: "sitesnap-28da9.firebaseapp.com",
@@ -40,11 +32,8 @@
       measurementId: "G-MXH9N9N99Q"
     };
 
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-  </script>
-
-  <!-- Auth Logic -->
-  <script>
     const auth = firebase.auth();
 
     function signUp() {
@@ -52,9 +41,8 @@
       const password = document.getElementById("password").value;
 
       auth.createUserWithEmailAndPassword(email, password)
-        .then(() => {
-          document.getElementById("auth-message").innerText = "Signup successful!";
-          // Redirect or show dashboard later
+        .then((userCredential) => {
+          window.location.href = "dashboard.html"; // Redirect to dashboard after signup
         })
         .catch((error) => {
           document.getElementById("auth-message").innerText = error.message;
@@ -66,9 +54,8 @@
       const password = document.getElementById("password").value;
 
       auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          document.getElementById("auth-message").innerText = "Login successful!";
-          // Later: window.location.href = "dashboard.html";
+        .then((userCredential) => {
+          window.location.href = "dashboard.html"; // Redirect to dashboard after login
         })
         .catch((error) => {
           document.getElementById("auth-message").innerText = error.message;
