--- a/index.html
+++ b/index.html
@@ -4,22 +4,107 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SiteSnap</title>
-  <!-- Bootstrap CSS for responsive layout -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-    crossorigin="anonymous"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f9fa;
+    }
+    .hero {
+      text-align: center;
+      padding: 60px 20px;
+      background: #007bff;
+      color: white;
+    }
+    .pricing-header {
+      text-align: center;
+      padding: 30px 20px;
+    }
+    .btn-auth {
+      margin: 0 10px;
+    }
+  </style>
 </head>
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!-- Bootstrap JS bundle (includes Popper) -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"
-  ></script>
+
+  <!-- Hero Section -->
+  <div class="hero">
+    <h1>Welcome to SiteSnap</h1>
+    <p>Simple job and customer tracking for small service businesses</p>
+    <a href="login.html" class="btn btn-light btn-auth">Login</a>
+    <a href="signup.html" class="btn btn-outline-light btn-auth">Sign Up</a>
+  </div>
+
+  <!-- Pricing Section -->
+  <div class="container mt-5">
+    <div class="pricing-header">
+      <h2>Choose Your Plan</h2>
+      <p class="text-muted">Start tracking jobs in under 5 minutes</p>
+    </div>
+    <div class="row text-center">
+      <!-- Starter -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <div class="card-header bg-primary text-white">
+            <h3>Starter</h3>
+          </div>
+          <div class="card-body">
+            <h4>$0 / month</h4>
+            <ul class="list-unstyled">
+              <li>✅ Add Jobs</li>
+              <li>✅ Track Job Status</li>
+              <li>✅ Customer List</li>
+              <li>🚫 Email Reminders</li>
+              <li>🚫 File Uploads</li>
+            </ul>
+            <a href="signup.html" class="btn btn-primary">Get Started</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Team -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <div class="card-header bg-success text-white">
+            <h3>Team</h3>
+          </div>
+          <div class="card-body">
+            <h4>$9 / month</h4>
+            <ul class="list-unstyled">
+              <li>✅ Everything in Starter</li>
+              <li>✅ File Uploads</li>
+              <li>✅ Multiple Users</li>
+              <li>🚫 Email Reminders</li>
+            </ul>
+            <a href="signup.html" class="btn btn-success">Upgrade Now</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Elite -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <div class="card-header bg-dark text-white">
+            <h3>Elite</h3>
+          </div>
+          <div class="card-body">
+            <h4>$19 / month</h4>
+            <ul class="list-unstyled">
+              <li>✅ Everything in Team</li>
+              <li>✅ Email Reminders</li>
+              <li>✅ Priority Support</li>
+            </ul>
+            <a href="signup.html" class="btn btn-dark">Go Elite</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="text-center py-4 mt-5 text-muted">
+    &copy; 2025 SiteSnap
+  </footer>
+
 </body>
 </html>
