--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
           <div class="card-body">
             <h4>$29 / month</h4>
             <ul class="list-unstyled">
-              <li>✅ Add Jobs</li>
-              <li>✅ Track Job Status</li>
-              <li>✅ Customer List</li>
-              <li>🚫 Email Reminders</li>
-              <li>🚫 File Uploads</li>
+              <li> Job & client tracking</li>
+              <li> Job calendar with crew assignments</li>
+              <li> Task lists per job</li>
+              <li> Job photo uploads (before/after)</li>
+              <li> Mobile-friendly access for field use</li>
+              <li> Job reminders and notifications</li>
+              <li> Basic reporting dashboard (e.g. jobs this month, open/completed)</li>
             </ul>
             <a href="signup.html" class="btn btn-primary">Get Started</a>
           </div>
@@ -71,10 +73,18 @@
           <div class="card-body">
             <h4>$59 / month</h4>
             <ul class="list-unstyled">
-              <li>✅ Everything in Starter</li>
-              <li>✅ File Uploads</li>
-              <li>✅ Multiple Users</li>
-              <li>🚫 Email Reminders</li>
+              <li> Everything in Starter</li>
+              <li> Multi-user access with roles/permissions</li>
+              <li> Drag-and-drop job scheduling</li>
+              <li> Job status tracking (e.g. Scheduled → In Progress → Completed)</li>
+              <li> File/document uploads (e.g. permits, plans)</li>
+              <li> Job-level internal comments/notes</li>
+              <li> Optional team chat/messaging per job</li>
+              <li> Customer pipeline tracker:
+Manage new leads through stages like “New,” “Contacted,” “Walkthrough Scheduled,” “Job Approved,”</li>
+              <li> Stripe & QuickBooks Online (Basic):
+Stripe: Accept payments (optional)
+QBO: Sync customer contact info and job records</li>
             </ul>
             <a href="signup.html" class="btn btn-success">Upgrade Now</a>
           </div>
@@ -90,9 +100,20 @@
           <div class="card-body">
             <h4>$119 / month</h4>
             <ul class="list-unstyled">
-              <li>✅ Everything in Team</li>
-              <li>✅ Email Reminders</li>
-              <li>✅ Priority Support</li>
+              <li> Everything in Team</li>
+              <li> Multiple team/region support (e.g. assign crews by area)</li>
+              <li> Workflow automation:
+Auto-reminders for tasks or status changes
+Auto-mark jobs as completed when tasks are done</li>
+              <li> Advanced reporting:
+Crew productivity
+Job cycle times
+Job volume per team</li>
+              <li> Auto-sync to QuickBooks/Xero (customers, payments, job data)</li>
+              <li> CRM sync with HubSpot or Salesforce (for companies with external sales teams)</li>
+              <li> Priority support and onboarding:
+Faster support response times
+Account setup assistance</li>
             </ul>
             <a href="signup.html" class="btn btn-dark">Go Elite</a>
           </div>
